--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/order-attack-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/order-attack-view.fxml
@@ -1,36 +1,39 @@
 <?import fr.butinfoalt.riseandfall.front.components.TitleLabel?>
 <?import fr.butinfoalt.riseandfall.front.game.orders.table.UnitsSelectTable?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
       fx:controller="fr.butinfoalt.riseandfall.front.game.orders.OrderAttackController">
     <ImageView fx:id="backgroundImageView" managed="false"/>
 
-    <VBox.margin>
-        <Insets top="20"/>
-    </VBox.margin>
-    <VBox alignment="CENTER" spacing="10">
-        <TitleLabel>Qui attaquez-vous ?:</TitleLabel>
+    <ScrollPane fitToWidth="true" styleClass="scrollpane-transparent" fx:id="root">
+        <VBox alignment="CENTER" spacing="20.0">
 
-        <ChoiceBox fx:id="targetPlayerSelector"/>
-    </VBox>
-    <VBox alignment="CENTER" spacing="10">
-        <TitleLabel>Avec quelles unités ?</TitleLabel>
+            <VBox.margin>
+                <Insets top="20"/>
+            </VBox.margin>
+            <VBox alignment="CENTER" spacing="10">
+                <TitleLabel>Qui attaquez-vous ?:</TitleLabel>
 
-        <UnitsSelectTable fx:id="unitsTable"/>
-    </VBox>
+                <ChoiceBox fx:id="targetPlayerSelector"/>
+            </VBox>
+            <VBox alignment="CENTER" spacing="10">
+                <TitleLabel>Avec quelles unités ?</TitleLabel>
 
-    <HBox alignment="CENTER" spacing="10">
-        <!-- Bouton Sauvegarder -->
-        <Button text="Sauvegarder" onAction="#handleSave"/>
+                <UnitsSelectTable fx:id="unitsTable"/>
+            </VBox>
 
-        <!-- Bouton Annuler -->
-        <Button text="Annuler" onAction="#switchBack"/>
-    </HBox>
+            <HBox alignment="CENTER" spacing="10">
+                <!-- Bouton Sauvegarder -->
+                <Button text="Sauvegarder" onAction="#handleSave"/>
 
-    <Label fx:id="errorMessage" style="-fx-text-fill: red;" visible="false"/>
+                <!-- Bouton Annuler -->
+                <Button text="Annuler" onAction="#switchBack"/>
+            </HBox>
+
+            <Label fx:id="errorMessage" style="-fx-text-fill: red;" visible="false"/>
+        </VBox>
+    </ScrollPane>
 </VBox>
