Amélioration du rendu des titres et des tableaux

--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/gamelist-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/gamelist-view.fxml
@@ -23,7 +23,7 @@
             <ChoiceBox fx:id="raceChoiceBox"/>
 
             <TitleLabel style="-fx-font-size: 25px; -fx-font-weight: bold; -fx-text-fill: black;">
-                Listes des parties disponibles:
+                Listes des parties disponibles
             </TitleLabel>
 
             <VBox fx:id="listContainer" alignment="CENTER"
