--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/order-attack-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/order-attack-view.fxml
@@ -15,7 +15,7 @@
                 <Insets top="20"/>
             </VBox.margin>
             <VBox alignment="CENTER" spacing="10">
-                <TitleLabel>Qui attaquez-vous ?:</TitleLabel>
+                <TitleLabel>Qui attaquez-vous ?</TitleLabel>
 
                 <ChoiceBox fx:id="targetPlayerSelector"/>
             </VBox>
