--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/styles/style.css
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/styles/style.css
@@ -4,7 +4,8 @@
 }
 
 .title-label {
-    -fx-font-size: 120%;
+    -fx-font-family: "Arial Black", sans-serif;
+    -fx-font-size: 110%;
 }
 
 .purchasable-table-column {
