Correction de bugs et ajout de l'écran de mort (qui n'est rien d'autre que l'écran d'historique mais sans le bouton retour)

--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/attacks-logs-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/attacks-logs-view.fxml
@@ -14,10 +14,11 @@
     <VBox fx:id="root" alignment="CENTER" spacing="20">
         <TitleLabel style="-fx-font-size: 130%">Historique des attaques</TitleLabel>
 
+        <Label fx:id="eliminatedLabel" textFill="red" style="-fx-font-size: 120%"/>
         <ScrollPane fitToWidth="true" styleClass="scrollpane-transparent">
             <VBox fx:id="listContainer" alignment="CENTER" spacing="20"/>
         </ScrollPane>
 
-        <Button text="Retour" onAction="#switchBack"/>
+        <Button text="Retour" onAction="#switchBack" fx:id="backButton"/>
     </VBox>
 </VBox>
