Finalisation écrans de victoire et défaite + retour au menu de sélection des parties

--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/attacks-logs-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/attacks-logs-view.fxml
@@ -19,6 +19,6 @@
             <VBox fx:id="listContainer" alignment="CENTER" spacing="20"/>
         </ScrollPane>
 
-        <Button text="Retour" onAction="#switchBack" fx:id="backButton"/>
+        <Button onAction="#switchBack" fx:id="backButton"/>
     </VBox>
 </VBox>
