--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/victory-screen-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/victory-screen-view.fxml
@@ -1,9 +1,7 @@
-<?import fr.butinfoalt.riseandfall.front.components.TitleLabel?>
-<?import fr.butinfoalt.riseandfall.front.game.orders.table.UnitsSelectTable?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.VBox?>
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
       fx:controller="fr.butinfoalt.riseandfall.front.game.VictoryScreenController">
     <ImageView fx:id="backgroundImageView" managed="false"/>
@@ -16,7 +14,7 @@
         <Label text="Que vous ayez réduit vos rivaux en cendres ou surpassé tous les défis du temps, votre civilisation se dresse désormais au sommet du monde.."
                style="-fx-font-size: 16; -fx-padding: 10;"/>
         <Button text="Relever un nouveau défi"
-                onAction="#onReturnToMainMenu"
+                onAction="#onReturnToGameList"
                 style="-fx-font-size: 16; -fx-padding: 10;"/>
 
     </VBox>
