--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/styles/style.css
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/styles/style.css
@@ -1,4 +1,4 @@
-.root {
+.root, .title-label.force-custom-font {
     -fx-font-family: "IM FELL ENGLISH SC", Times, serif;
     -fx-font-size: 12pt;
 }
