Amélioration de la page de description & règles, encore

--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/gamelist-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/gamelist-view.fxml
@@ -34,7 +34,7 @@
 
             <Label fx:id="errorMessage" style="-fx-text-fill: red;" visible="false"/>
 
-            <Button text="Règles du jeu" onAction="#switchToDescriptionPage"/>
+            <Button text="Description &amp; Règles du jeu" onAction="#switchToDescriptionPage"/>
         </VBox>
     </ScrollPane>
 </VBox>
