Changement de la répartition des polices d'écriture pour améliorer la lisibilité et correction de bugs

--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/components/attack-log-component.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/components/attack-log-component.fxml
@@ -10,4 +10,5 @@
 
     <VBox fx:id="attacksLogs"/>
     <VBox fx:id="eliminatedPlayersLogs"/>
+    <VBox fx:id="winningPlayersLogs" visible="false"/>
 </VBox>
