--- a/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/victory-screen-view.fxml
+++ b/Front/src/main/resources/fr/butinfoalt/riseandfall/front/game/victory-screen-view.fxml
@@ -2,8 +2,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 <VBox xmlns:fx="http://javafx.com/fxml" alignment="CENTER" spacing="20.0"
-      fx:controller="fr.butinfoalt.riseandfall.front.game.VictoryScreenController">
+      fx:controller="fr.butinfoalt.riseandfall.front.game.VictoryScreenController"
+      styleClass="force-custom-font">
     <ImageView fx:id="backgroundImageView" managed="false"/>
     <VBox alignment="CENTER" spacing="20.0">
 
@@ -11,12 +13,17 @@
                style="-fx-font-size: 30; -fx-text-fill: green; -fx-padding: 20;"/>
         <Label text="Vous avez remporté la partie !"
                style="-fx-font-size: 20; -fx-padding: 10;"/>
-        <Label text="Que vous ayez réduit vos rivaux en cendres ou surpassé tous les défis du temps, votre civilisation se dresse désormais au sommet du monde.."
+        <Label text="Que vous ayez réduit vos rivaux en cendres ou surpassé tous les défis du temps, votre civilisation se dresse désormais au sommet du monde..."
                style="-fx-font-size: 16; -fx-padding: 10;"/>
-        <Button text="Relever un nouveau défi"
-                onAction="#onReturnToGameList"
-                style="-fx-font-size: 16; -fx-padding: 10;"/>
 
+        <HBox alignment="CENTER" spacing="20">
+            <Button text="Relever un nouveau défi"
+                    onAction="#onReturnToGameList"
+                    style="-fx-font-size: 16; -fx-padding: 10;"/>
+            <Button text="Afficher le journal des attaques"
+                    onAction="#onShowAttackLogs"
+                    style="-fx-font-size: 16; -fx-padding: 10;"/>
+        </HBox>
     </VBox>
 
 </VBox>
